# pkg/handler/user.go
@@ -9,6 +9,19 @@ import (
 	"github.com/unedtamps/gobackend/util"
 )
 
+// Register User
+//
+//		@Summary		Register User
+//		@Description	User this api to Register your account
+//		@Tags			accounts
+//		@Accept			json
+//		@Produce		json
+//		@Param			 request  body  dto.UserRegister  true  "register using data request"
+//	 @Success      200  {object}  util.Success
+//	 @Failure      404  {object}  util.Error
+//	 @Failure      400  {object}  util.Error
+//	 @Failure      500  {object}  util.Error
+//		@Router			/user/register [post]
 func (h *Handler) Register(w http.ResponseWriter, r *http.Request) {
 	request := r.Context().Value("req").(dto.UserRegister)
 	id, err := h.User.RegisterUser(context.Background(), request)
@@ -19,7 +32,7 @@ func (h *Handler) Register(w http.ResponseWriter, r *http.Request) {
 	util.ResponseSuccess(w, id, 201, "berhasil register")
 }
 
-// ShowAccount godoc
+// Login User
 //
 //		@Summary		Login User
 //		@Description	User this api to Login your account
@@ -27,9 +40,11 @@ func (h *Handler) Register(w http.ResponseWriter, r *http.Request) {
 //		@Accept			json
 //		@Produce		json
 //		@Param			 request  body  dto.UserLogin  true  "login using data request"
-//	 @Success      200  {object}  util.Response
-//	 @Failure      400 404 500  {object}  util.Response
-//		@Router			/user/login/ [post]
+//	 @Success      200  {object}  util.Success
+//	 @Failure      404  {object}  util.Error
+//	 @Failure      400  {object}  util.Error
+//	 @Failure      500  {object}  util.Error
+//		@Router			/user/login [post]
 func (h *Handler) Login(w http.ResponseWriter, r *http.Request) {
 
 	request := r.Context().Value("req").(dto.UserLogin)
